--- a/src/components/navigation.scss
+++ b/src/components/navigation.scss
@@ -9,12 +9,10 @@ aside {
 	margin: 0 $spacing;
 	top: 0;
 	left: 0;
-	float: left;
 	background: transparent;
 	z-index: 9999;
 	display: flex;
 	flex-flow: column nowrap;
-	align-items: flex-end;
 
 	@media screen and (max-width: $breakpointLarge) {
         position: initial;
@@ -22,6 +20,10 @@ aside {
 		width: 100%;
 		min-height: 0px;
 		margin: 0 0 $spacing;
+	}
+
+	@media screen and (min-width: $breakpointAboveLarge) {
+		align-items: flex-end;
 	}
 
     .logo-link {
@@ -37,7 +39,6 @@ aside {
         }
 
         @media screen and (min-width: $breakpointAboveLarge) {
-            float: right;
             padding: $spacing 0 0 0;
         }
 
@@ -48,19 +49,19 @@ aside {
     }
 
 	nav {
-        float: right;
         width: calc(100% - #{$mobileLogoSize} - #{$mobileSpacing} * 4);
 		padding: 0;
-        margin: 4.5rem $mobileSpacing $mobileSpacing $mobileSpacing;
+        margin: $mobileSpacing 0 0;
 		flex: 10 10 auto;
+		display: flex;
+		flex-flow: row wrap;
 
         @media screen and (min-width: $breakpointAboveSmall) {
             width: calc(100% - #{$logoSize} - #{$spacing} * 4);
-			margin: 4.5rem $spacing $spacing $spacing;
+			margin: $spacing 0 0;
         }
         
 		@media screen and (min-width: $breakpointAboveLarge) {
-            float: none;
             width: 100%;
             margin: 75px 0 0;
             text-transform: uppercase;
@@ -68,10 +69,19 @@ aside {
 
 		> ul {
             position: relative;
-            width: 100%;
+			width: 100%;
 			text-align: right;
-            margin: 0;
+            margin: 0 $mobileSpacing 0 0;
             padding: 0;
+			display: flex;
+			flex-flow: row wrap;
+			align-content: flex-end;
+			justify-content: flex-end;
+
+			@media screen and (min-width: $breakpointAboveSmall) {
+				margin: 0 $spacing 0 0;
+				align-content: flex-start;
+			}
 		}
 
 		li {
@@ -109,16 +119,14 @@ aside {
 
         .subNav {
 			display: none;
-            position: absolute;
-            right: 0;
 			width: 100%;
-            margin: $spacing 0;
-            padding: 0;
+			order: 4;
             
 			@media screen and (min-width: $breakpointAboveLarge) {
 				position: relative;
 				width: auto;
 				margin: $spacing 15px 20px 0;
+				order: 0;
 			}
 
             &.subNavVisible {
